[package]
name = "dolar-rs"
version = "0.1.0"
authors = ["Andrés Testi <andres.a.testi.gmail.com>"]
edition = "2018"

[dependencies]
tensorflow = { version = "0.13", features = ["tensorflow_gpu"] }
failure = "0.1.5"
reqwest="0.9"
chrono={ version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1"

